--- a/Code/Extraccion_tweets _sidorov.ipynb
+++ b/Code/Extraccion_tweets _sidorov.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "682db4c3-b740-4c07-b83d-1213f8036603",
    "metadata": {},
    "outputs": [],
@@ -187,13 +187,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "1db4c4ff-6d97-45dd-a8ff-e7e26051ff62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1699</th>\n",
+       "      <td>Ariel Freez Lo más importante en la vida, es a...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1379</th>\n",
+       "      <td>Tener una amiga de fierro, un amor sincero y u...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>Pachuca a la final, Delfines campeon, mañana c...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5632</th>\n",
+       "      <td>una mujer poca ropa riendo como loca para lla...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6874</th>\n",
+       "      <td>Récord Mundial: Mayor rompecabezas hecho con t...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5734</th>\n",
+       "      <td>\"VIENE LA VELA,ME DIJERON LOS DE ARRIBA QUE L...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5191</th>\n",
+       "      <td>las personas que critican todo el tiempo, a t...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5390</th>\n",
+       "      <td>la gente que habla mal a espaldas de otros mi...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>860</th>\n",
+       "      <td>Que bueno saber que Tus Palabras pueden marcar...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7270</th>\n",
+       "      <td>Que loco es cruzarte a la vecina de enfrente y...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7820 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   text  label\n",
+       "1699  Ariel Freez Lo más importante en la vida, es a...      3\n",
+       "1379  Tener una amiga de fierro, un amor sincero y u...      3\n",
+       "180   Pachuca a la final, Delfines campeon, mañana c...      3\n",
+       "5632   una mujer poca ropa riendo como loca para lla...      0\n",
+       "6874  Récord Mundial: Mayor rompecabezas hecho con t...      5\n",
+       "...                                                 ...    ...\n",
+       "5734   \"VIENE LA VELA,ME DIJERON LOS DE ARRIBA QUE L...      0\n",
+       "5191   las personas que critican todo el tiempo, a t...      0\n",
+       "5390   la gente que habla mal a espaldas de otros mi...      0\n",
+       "860   Que bueno saber que Tus Palabras pueden marcar...      3\n",
+       "7270  Que loco es cruzarte a la vecina de enfrente y...      5\n",
+       "\n",
+       "[7820 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a40a5704-85b4-4e35-ada9-484b95f7cb14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "050a5fc9-ad5b-4a9e-b5c1-34e1ffb63520",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
