--- a/Code/Hugging_datasets.ipynb
+++ b/Code/Hugging_datasets.ipynb
@@ -491,8 +491,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "62a24e3e-e63b-44d7-8848-aae9d8265988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algo = pd.read_csv('../Data/Huggingface/semval_emoevent_hugging_train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "82a6611f-8cf8-4b66-93ac-aa05aab60b1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Así me despertó mi amorcito❤ gracias amor rrmi...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Doy por finalizado este finde...que ha sido ta...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Que asco me da el juego de España... Muchos pa...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>Me parece a mi o Mc' donalds esta bajando c/ve...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>Algunas personas emanan el aliento x su piel.....</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7714</th>\n",
+       "      <td>Pero que asco me da la gente que piense que Me...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7718</th>\n",
+       "      <td>Me parece horrible que el PP quite jueces y co...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7748</th>\n",
+       "      <td>@gcuestm y quiero q llegue el momento otra vez...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7772</th>\n",
+       "      <td>la flaca se vea rica en foto y en persona se ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7801</th>\n",
+       "      <td>Saliendo de una entrevista d trabajo...a ver s...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>292 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   text  label\n",
+       "12    Así me despertó mi amorcito❤ gracias amor rrmi...      3\n",
+       "13    Doy por finalizado este finde...que ha sido ta...      3\n",
+       "25    Que asco me da el juego de España... Muchos pa...      4\n",
+       "114   Me parece a mi o Mc' donalds esta bajando c/ve...      4\n",
+       "189   Algunas personas emanan el aliento x su piel.....      4\n",
+       "...                                                 ...    ...\n",
+       "7714  Pero que asco me da la gente que piense que Me...      4\n",
+       "7718  Me parece horrible que el PP quite jueces y co...      4\n",
+       "7748  @gcuestm y quiero q llegue el momento otra vez...      5\n",
+       "7772   la flaca se vea rica en foto y en persona se ...      0\n",
+       "7801  Saliendo de una entrevista d trabajo...a ver s...      0\n",
+       "\n",
+       "[292 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sidorov_hugging_train[sidorov_hugging_train['text'].str.contains('#')]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b0f0f9e0-c66c-44ca-930e-febe436a95c7",
+   "id": "91b50e3f-3a08-4785-ac63-b2e88a2ae435",
    "metadata": {},
    "outputs": [],
    "source": []
