agrego data exploration

--- a/Code/Extraccion_tweets _sidorov.ipynb
+++ b/Code/Extraccion_tweets _sidorov.ipynb
@@ -166,23 +166,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "99ed5c9c-a5bd-4f42-aa68-a2ebda9acd87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Todos dios intenta dar una buena imagen por las redes sociales.... y luego si los vieras en persona te llevas disgustos #asco'"
+       "'que asco que me dio ver a todas las gallinas yendo para el obelisco cuando volvi del viaje a tandill '"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "emociones_tweets_df['text'][2000]"
+    "emociones_tweets_df['text'][3000]"
    ]
   },
   {
