--- a/Code/Cleaning.ipynb
+++ b/Code/Cleaning.ipynb
@@ -268,6 +268,14 @@
    "source": [
     "cleaned_political['Sector'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "dbc4ce54-47eb-4991-a7cf-70c8a353d07e",
+   "metadata": {},
+   "source": [
+    "sample_df['text'] = sample_df['text'].str.replace('\\n', '')"
+   ]
   }
  ],
  "metadata": {
