--- a/Code/Hugging_datasets.ipynb
+++ b/Code/Hugging_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "3d30a86a-15cf-4415-80d7-7ff88f980c64",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "d7288c67-a240-46b0-af13-75c49c4f9c65",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c4eb85ec35f4a7ca192274f6f79de97",
+       "model_id": "eef03c236a4b40ad937715f78f8913ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +201,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "id": "a2c91d08-ff60-41bc-aa82-45c5876ceb61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['ID', 'Tweet', 'anger', 'anticipation', 'disgust', 'fear', 'joy', 'love', 'optimism', 'pessimism', 'sadness', 'surprise', 'trust'],\n",
+       "        num_rows: 3561\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['ID', 'Tweet', 'anger', 'anticipation', 'disgust', 'fear', 'joy', 'love', 'optimism', 'pessimism', 'sadness', 'surprise', 'trust'],\n",
+       "        num_rows: 2854\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['ID', 'Tweet', 'anger', 'anticipation', 'disgust', 'fear', 'joy', 'love', 'optimism', 'pessimism', 'sadness', 'surprise', 'trust'],\n",
+       "        num_rows: 679\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "semval_raw[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "8436e64f-869f-46e8-9f01-5ea9346b17bd",
    "metadata": {},
    "outputs": [],
@@ -211,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "id": "06616fab-ba48-4f48-9f8e-30a6d25d17c6",
    "metadata": {},
    "outputs": [],
@@ -226,7 +260,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
+   "id": "0ee6975e-05cb-4d67-ac7b-c3bcac6586d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Tweet</th>\n",
+       "      <th>anger</th>\n",
+       "      <th>anticipation</th>\n",
+       "      <th>disgust</th>\n",
+       "      <th>fear</th>\n",
+       "      <th>joy</th>\n",
+       "      <th>love</th>\n",
+       "      <th>optimism</th>\n",
+       "      <th>pessimism</th>\n",
+       "      <th>sadness</th>\n",
+       "      <th>surprise</th>\n",
+       "      <th>trust</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-Es-01643</td>\n",
+       "      <td>@aliciaenp Ajajjaa somos del clan twitteras pe...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-Es-05142</td>\n",
+       "      <td>@AwadaNai la mala suerte del gato fichame la c...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-Es-05379</td>\n",
+       "      <td>@audiomano A mí tampoco me agrado mucho eso. E...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-Es-00208</td>\n",
+       "      <td>Para llevar a los bebes de un lugar a otro deb...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-Es-01385</td>\n",
+       "      <td>@DalasReview me encanta la terrible hipocresia...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>674</th>\n",
+       "      <td>2018-Es-06551</td>\n",
+       "      <td>@tccharless  -Peligro al volante -Tec -Los San...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>675</th>\n",
+       "      <td>2018-Es-02782</td>\n",
+       "      <td>Vamos a ver q sucedio en mi barrio en los 90 #...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>676</th>\n",
+       "      <td>2018-Es-01308</td>\n",
+       "      <td>@kopexinfinity FELICIDADES FER 💕 QUE ESTA PASA...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>677</th>\n",
+       "      <td>2018-Es-02136</td>\n",
+       "      <td>@PabloEmanuel299 LAMENTO MI CONFUSIÓN DE RAMA ...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678</th>\n",
+       "      <td>2018-Es-03951</td>\n",
+       "      <td>Mi sobrina vio la foto que esta en la pared, l...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7094 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ID                                              Tweet  anger  \\\n",
+       "0    2018-Es-01643  @aliciaenp Ajajjaa somos del clan twitteras pe...  False   \n",
+       "1    2018-Es-05142  @AwadaNai la mala suerte del gato fichame la c...  False   \n",
+       "2    2018-Es-05379  @audiomano A mí tampoco me agrado mucho eso. E...   True   \n",
+       "3    2018-Es-00208  Para llevar a los bebes de un lugar a otro deb...  False   \n",
+       "4    2018-Es-01385  @DalasReview me encanta la terrible hipocresia...   True   \n",
+       "..             ...                                                ...    ...   \n",
+       "674  2018-Es-06551  @tccharless  -Peligro al volante -Tec -Los San...  False   \n",
+       "675  2018-Es-02782  Vamos a ver q sucedio en mi barrio en los 90 #...  False   \n",
+       "676  2018-Es-01308  @kopexinfinity FELICIDADES FER 💕 QUE ESTA PASA...  False   \n",
+       "677  2018-Es-02136  @PabloEmanuel299 LAMENTO MI CONFUSIÓN DE RAMA ...  False   \n",
+       "678  2018-Es-03951  Mi sobrina vio la foto que esta en la pared, l...  False   \n",
+       "\n",
+       "     anticipation  disgust   fear    joy   love  optimism  pessimism  sadness  \\\n",
+       "0           False    False  False   True  False     False      False    False   \n",
+       "1           False    False   True  False  False     False       True    False   \n",
+       "2           False    False  False  False  False     False      False    False   \n",
+       "3           False    False  False   True  False     False      False    False   \n",
+       "4           False     True  False  False  False     False      False    False   \n",
+       "..            ...      ...    ...    ...    ...       ...        ...      ...   \n",
+       "674         False    False   True  False  False     False      False    False   \n",
+       "675          True    False  False  False  False     False      False    False   \n",
+       "676         False    False  False   True  False     False      False    False   \n",
+       "677         False    False  False  False  False     False      False    False   \n",
+       "678         False    False  False   True  False     False      False    False   \n",
+       "\n",
+       "     surprise  trust  \n",
+       "0       False  False  \n",
+       "1       False  False  \n",
+       "2       False  False  \n",
+       "3       False  False  \n",
+       "4       False  False  \n",
+       "..        ...    ...  \n",
+       "674     False  False  \n",
+       "675     False  False  \n",
+       "676     False  False  \n",
+       "677     False  False  \n",
+       "678     False  False  \n",
+       "\n",
+       "[7094 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "semval_new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "cd4822e1-af0e-4c9e-ace5-2ae87c826272",
    "metadata": {},
    "outputs": [],
@@ -238,13 +548,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "id": "4f4d3a80-5e81-4e46-9a6d-59e9dc3764e2",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -252,13 +558,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13734/1128644199.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_29514/1128644199.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  semval_new_df_filt['emotiom_raw'] = semval_new_df_filt.iloc[:, 2:].dot(semval_new_df_filt.add_suffix(\"~~\").columns[2:]).str[:-2]\n",
-      "/tmp/ipykernel_13734/1128644199.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_29514/1128644199.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -276,6 +582,43 @@
     "semval_new_df_filt['emotiom_raw'] = semval_new_df_filt.iloc[:, 2:].dot(semval_new_df_filt.add_suffix(\"~~\").columns[2:]).str[:-2]\n",
     "semval_new_df_filt['emotiom_raw'][semval_new_df_filt['emotiom_raw'] == ''] = 'other'\n",
     "semval_clean = semval_new_df_filt[~semval_new_df_filt['emotiom_raw'].str.contains('~')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "172a8fc0-487d-4427-b690-e1752d057db5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['@DalasReview me encanta la terrible hipocresia y doble moral que tiene esta gente, claro, cuando ella te lo quita ILEGALMENTE no importa...',\n",
+       " 'me voy a morir sin saber por qué @. y @.. y @... me dieron block y los espantaré cada noche hasta que se arrepientan']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(semval_new_df_filt[semval_new_df_filt['emotiom_raw'].str.contains('~')]['Tweet'][0:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8430539b-4dff-42c3-b679-1525792df6ed",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "semval_mixed_sample = semval_new_df_filt[semval_new_df_filt['emotiom_raw'].str.contains('~')][['Tweet','emotiom_raw']][0:100]\n",
+    "semval_mixed_sample .to_csv('../Data/Semval/semval_mixed_examples.csv', index = False)"
    ]
   },
   {
@@ -301,7 +644,7 @@
     "semval_clean[\"emocion\"] = semval_clean[\"emotiom_raw\"].map(map_dict_semval)\n",
     "semval_clean = semval_clean.rename(columns={\"Tweet\": \"tweet\"})\n",
     "semval_clean = semval_clean[['tweet','emocion']]\n",
-    "semval_clean.to_csv('../Data/Semval/semval.csv', index=False) "
+    "#semval_clean.to_csv('../Data/Semval/semval.csv', index=False) "
    ]
   },
   {
@@ -313,17 +656,32 @@
    "source": [
     "semval_clean['label'] = semval_clean[\"emocion\"].map(map_dict_inverse)\n",
     "semval_clean = semval_clean.rename(columns={\"tweet\": \"text\"})\n",
-    "semval_clean.to_csv('../Data/Semval/semval.csv', index=False) "
+    "#semval_clean.to_csv('../Data/Semval/semval.csv', index=False) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "4744262a-24c0-4def-8de4-666dc5f1b508",
    "metadata": {},
    "outputs": [],
    "source": [
     "semval_clean = pd.read_csv('../Data/Semval/semval.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "460af52c-dc4a-4c26-8e51-aa45cea73121",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "examples = {}\n",
+    "for i in semval_clean['emocion'].unique():\n",
+    "    example = list(semval_clean[semval_clean['emocion'] == i][0:50]['text'])\n",
+    "    examples[i] = example\n",
+    "examples_df = pd.DataFrame(examples)\n",
+    "examples_df.to_csv('../Data/Semval/semval_examples.csv', index = False)"
    ]
   },
   {
