--- a/Code/Lexicon_emotions.ipynb
+++ b/Code/Lexicon_emotions.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 2,
    "id": "9d339457-baba-46a0-9ed5-65c3f8a867df",
    "metadata": {
     "tags": []
@@ -58,6 +58,40 @@
     "sel = pd.read_csv('../Data/SEL/SEL_full.txt', delimiter='\\t', encoding= 'ISO-8859-1')\n",
     "sel  = sel.drop_duplicates(subset=['Palabra', 'Categoría'])\n",
     "sel_list = list(sel['Palabra'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c49e9d95-ca5d-4e36-bbf7-bc045761d2ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emotions_dict = {}\n",
+    "for i in sel['Categoría'].unique():\n",
+    "    emotions_list = list(sel[sel['Categoría'] == i].sort_values(by= [' PFA'], ascending = False)[:20]['Palabra'])\n",
+    "    emotions_dict[i] = emotions_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "72052243-0419-464d-9fa7-d653ae424665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emotions_words = pd.DataFrame(emotions_dict)\n",
+    "emotions_words.to_csv('../Data/Sidorov/top_emotions_words.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e19209bb-d02d-4188-a70b-fd13409d059a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alegria_list = sel[sel['Categoría'] == 'Alegría'].sort_values(by= [' PFA'], ascending = False)[:20]['Palabra']"
    ]
   },
   {
