--- a/Code/Annotations_aggregation.ipynb
+++ b/Code/Annotations_aggregation.ipynb
@@ -112,159 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "f71ebb54-8d90-419b-ae47-7eb0918d666b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "labeled_df = pd.read_csv('../Data/Data_Annotated/test_labeled_dataset.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ed645157-6561-4071-aabe-24a635846f86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labeled_df_hugging =  labeled_df[['text', 'labels_encoded']].rename(columns = {'labels_encoded' : 'label'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "100517db-21fb-4c74-b3af-ffad6ec11ca0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>#NosUnimosONosJodemos #NosUnimosONosJodemos  Vamos juntos por el cambio, mire el miedo que le tienen.  @petrogustavo Mi presidente</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>@tobonsanin Otra vez este viejo estúpido politiquero, estamos es llevados cuando creemos  viejo decrépito de estos va hacer la solución para Colombia, ayudando a escoger corruptos como #quintero en MEDELLIN #PetroElPatronDelMal #Federic...</td>\n",
-       "      <td>[0, 0, 0, 0, 1, 1, 0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Sin importar encuestas como en el plebiscito juntos por Colombia el 29 nos vemos #FedericoImparable #NosUnimosONosJodemos #FedericoEsColombia</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Este es el Presidente que nos merecemos, recorrió el país entero, escuchó, expresó cariño y nos contagió la esperanza #FedericoEsColombia</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Por mi familia, por la democracia y las libertades. #FedericoEsColombia</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>210</th>\n",
-       "      <td>@VickyDavilaH Firme con @FicoGutierrez  desde la alcaldía de Medellín, es la mejor opción para nuestro país  #FicoElGanador</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>211</th>\n",
-       "      <td>@ArgiroCasta888 Hola Argiro, buen día, desde que voté por #FicoElGanador #FicoPresidente en Mayo 23, estoy celebrando el triunfo por la Democracia en Colombia.</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>212</th>\n",
-       "      <td>Porque NO QUIERO ver ni en pintura a Nicolás Maduro y Diosdado Cabello, entonces mi voto es por Federico Gutiérrez   #FicoElGanador</td>\n",
-       "      <td>[0, 0, 0, 0, 1, 0, 0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>213</th>\n",
-       "      <td>@GalloMatrix01 Hoy la peor delincuencia esta en el congreso gracias al PACTO DE DELINCUENTES. Este domingo no podemos caer en el comunismo. No van a ganar, no van a gobernar, no dirigirán este país. #FicoElGanador  #FicoEsColombia #Fico...</td>\n",
-       "      <td>[0, 1, 0, 0, 1, 0, 0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>214</th>\n",
-       "      <td>Las alianzas que hizo #ElPactoDeCorruptos demuestra q para ellos los ciudadanos valemos 💩💩💩. Han hecho un recorrido por todas las cárceles de Colombia y mientras más delincuente mejor para ellos.  Por esa razón.  #FicoElGanador  #FicoEl...</td>\n",
-       "      <td>[0, 0, 0, 0, 1, 0, 0]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>215 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                                                                                                                                                                                                text  \\\n",
-       "0                                                                                                                 #NosUnimosONosJodemos #NosUnimosONosJodemos  Vamos juntos por el cambio, mire el miedo que le tienen.  @petrogustavo Mi presidente   \n",
-       "1    @tobonsanin Otra vez este viejo estúpido politiquero, estamos es llevados cuando creemos  viejo decrépito de estos va hacer la solución para Colombia, ayudando a escoger corruptos como #quintero en MEDELLIN #PetroElPatronDelMal #Federic...   \n",
-       "2                                                                                                      Sin importar encuestas como en el plebiscito juntos por Colombia el 29 nos vemos #FedericoImparable #NosUnimosONosJodemos #FedericoEsColombia   \n",
-       "3                                                                                                          Este es el Presidente que nos merecemos, recorrió el país entero, escuchó, expresó cariño y nos contagió la esperanza #FedericoEsColombia   \n",
-       "4                                                                                                                                                                            Por mi familia, por la democracia y las libertades. #FedericoEsColombia   \n",
-       "..                                                                                                                                                                                                                                               ...   \n",
-       "210                                                                                                                      @VickyDavilaH Firme con @FicoGutierrez  desde la alcaldía de Medellín, es la mejor opción para nuestro país  #FicoElGanador   \n",
-       "211                                                                                  @ArgiroCasta888 Hola Argiro, buen día, desde que voté por #FicoElGanador #FicoPresidente en Mayo 23, estoy celebrando el triunfo por la Democracia en Colombia.   \n",
-       "212                                                                                                              Porque NO QUIERO ver ni en pintura a Nicolás Maduro y Diosdado Cabello, entonces mi voto es por Federico Gutiérrez   #FicoElGanador   \n",
-       "213  @GalloMatrix01 Hoy la peor delincuencia esta en el congreso gracias al PACTO DE DELINCUENTES. Este domingo no podemos caer en el comunismo. No van a ganar, no van a gobernar, no dirigirán este país. #FicoElGanador  #FicoEsColombia #Fico...   \n",
-       "214  Las alianzas que hizo #ElPactoDeCorruptos demuestra q para ellos los ciudadanos valemos 💩💩💩. Han hecho un recorrido por todas las cárceles de Colombia y mientras más delincuente mejor para ellos.  Por esa razón.  #FicoElGanador  #FicoEl...   \n",
-       "\n",
-       "                     label  \n",
-       "0    [1, 0, 0, 0, 0, 0, 0]  \n",
-       "1    [0, 0, 0, 0, 1, 1, 0]  \n",
-       "2    [1, 0, 0, 0, 0, 0, 0]  \n",
-       "3    [1, 0, 0, 0, 0, 0, 0]  \n",
-       "4    [1, 0, 0, 0, 0, 0, 0]  \n",
-       "..                     ...  \n",
-       "210  [1, 0, 0, 0, 0, 0, 0]  \n",
-       "211  [1, 0, 0, 0, 0, 0, 0]  \n",
-       "212  [0, 0, 0, 0, 1, 0, 0]  \n",
-       "213  [0, 1, 0, 0, 1, 0, 0]  \n",
-       "214  [0, 0, 0, 0, 1, 0, 0]  \n",
-       "\n",
-       "[215 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "labeled_df_hugging"
+    "labeled_df = pd.read_csv('../Data/Data_Annotated/test_labeled_dataset.csv')\n",
+    "labeled_df_hugging =  labeled_df[['text', 'labels_encoded']].rename(columns = {'labels_encoded' : 'label'})\n",
+    "labeled_df_hugging.to_csv('../Data/Data_Annotated/test_labeled_dataset_hugging.csv', index = False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee7331ea-6e77-4ed8-abe1-ed2fe8b2b1cb",
+   "id": "d4e7511f-ebb5-4cbc-9d21-cfce86653a4c",
    "metadata": {},
    "outputs": [],
    "source": []
