--- a/Code/Annotations_aggregation.ipynb
+++ b/Code/Annotations_aggregation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "04687ff6-c30b-45f6-8057-3adbd3e202bf",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "667d7ec7-96a6-429a-963e-663593961500",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "48f60347-b832-479a-8d68-ce44146ead6b",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "c890b074-c201-4695-9f3b-b148fc204f38",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a44e69a5-9a20-45c3-ad0f-37d3ea5e3a97",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2bc61df7-37a1-489d-b8a5-af2f6fe4fe43",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "id": "a66dbc25-dc76-489e-bde6-4392f56d5c81",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "id": "a27269a2-d96c-4496-8179-82f19d585716",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
     "    merged_df[emotion] =  merged_df[[emotion + '_juanjo',  emotion + '_ger',  emotion + '_juanma']].sum(axis=1)\n",
     "    merged_df[emotion] = np.where(merged_df[emotion]>= 2, True, False)\n",
     "merged_df['labels'] = merged_df[list(dict_emociones.keys())].apply(lambda x: ', '.join(x.index[x == True]), axis=1)\n",
-    "merged_df['labels_encoded'] = np.where(merged_df[list(dict_emociones.keys())] == 1, 1, 0).tolist()\n",
+    "merged_df['labels_encoded'] = np.where(merged_df[list(dict_emociones.keys())] == 1, 1.0, 0.0).tolist()\n",
     "labeled_df = merged_df[['text', 'tweet_id', 'labels', 'labels_encoded']]\n",
     "labeled_df = labeled_df[labeled_df['labels'] != ''].reset_index(drop = True)\n",
     "labeled_df.to_csv('../Data/Data_Annotated/test_labeled_dataset.csv', index = False)"
@@ -112,19 +112,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "f71ebb54-8d90-419b-ae47-7eb0918d666b",
    "metadata": {},
    "outputs": [],
    "source": [
     "labeled_df = pd.read_csv('../Data/Data_Annotated/test_labeled_dataset.csv')\n",
-    "labeled_df_hugging =  labeled_df[['text', 'labels_encoded']].rename(columns = {'labels_encoded' : 'label'})\n",
+    "labeled_df_hugging =  labeled_df[['text', 'labels_encoded']].rename(columns = {'labels_encoded' : 'labels'})\n",
     "labeled_df_hugging.to_csv('../Data/Data_Annotated/labeled_dataset_hugging.csv', index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "d4e7511f-ebb5-4cbc-9d21-cfce86653a4c",
    "metadata": {},
    "outputs": [
@@ -161,35 +161,35 @@
        "      <td>#NosUnimosONosJodemos #NosUnimosONosJodemos  Vamos juntos por el cambio, mire el miedo que le tienen.  @petrogustavo Mi presidente</td>\n",
        "      <td>1528216296147533824</td>\n",
        "      <td>alegria</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>@tobonsanin Otra vez este viejo estúpido politiquero, estamos es llevados cuando creemos  viejo decrépito de estos va hacer la solución para Colombia, ayudando a escoger corruptos como #quintero en MEDELLIN #PetroElPatronDelMal #Federic...</td>\n",
        "      <td>1528425111078019072</td>\n",
        "      <td>asco, ira</td>\n",
-       "      <td>[0, 0, 0, 0, 1, 1, 0]</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Sin importar encuestas como en el plebiscito juntos por Colombia el 29 nos vemos #FedericoImparable #NosUnimosONosJodemos #FedericoEsColombia</td>\n",
        "      <td>1528451337087762433</td>\n",
        "      <td>alegria</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Este es el Presidente que nos merecemos, recorrió el país entero, escuchó, expresó cariño y nos contagió la esperanza #FedericoEsColombia</td>\n",
        "      <td>1528336411451133955</td>\n",
        "      <td>alegria</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Por mi familia, por la democracia y las libertades. #FedericoEsColombia</td>\n",
        "      <td>1528335860470620160</td>\n",
        "      <td>alegria</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -203,35 +203,35 @@
        "      <td>@VickyDavilaH Firme con @FicoGutierrez  desde la alcaldía de Medellín, es la mejor opción para nuestro país  #FicoElGanador</td>\n",
        "      <td>1530015260735840263</td>\n",
        "      <td>alegria</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>211</th>\n",
        "      <td>@ArgiroCasta888 Hola Argiro, buen día, desde que voté por #FicoElGanador #FicoPresidente en Mayo 23, estoy celebrando el triunfo por la Democracia en Colombia.</td>\n",
        "      <td>1530115489980108800</td>\n",
        "      <td>alegria</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>212</th>\n",
        "      <td>Porque NO QUIERO ver ni en pintura a Nicolás Maduro y Diosdado Cabello, entonces mi voto es por Federico Gutiérrez   #FicoElGanador</td>\n",
        "      <td>1530133587269394432</td>\n",
        "      <td>asco</td>\n",
-       "      <td>[0, 0, 0, 0, 1, 0, 0]</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>213</th>\n",
        "      <td>@GalloMatrix01 Hoy la peor delincuencia esta en el congreso gracias al PACTO DE DELINCUENTES. Este domingo no podemos caer en el comunismo. No van a ganar, no van a gobernar, no dirigirán este país. #FicoElGanador  #FicoEsColombia #Fico...</td>\n",
        "      <td>1530182862250590209</td>\n",
        "      <td>miedo, asco</td>\n",
-       "      <td>[0, 1, 0, 0, 1, 0, 0]</td>\n",
+       "      <td>[0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>214</th>\n",
        "      <td>Las alianzas que hizo #ElPactoDeCorruptos demuestra q para ellos los ciudadanos valemos 💩💩💩. Han hecho un recorrido por todas las cárceles de Colombia y mientras más delincuente mejor para ellos.  Por esa razón.  #FicoElGanador  #FicoEl...</td>\n",
        "      <td>1530231996479324161</td>\n",
        "      <td>asco</td>\n",
-       "      <td>[0, 0, 0, 0, 1, 0, 0]</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -252,23 +252,23 @@
        "213  @GalloMatrix01 Hoy la peor delincuencia esta en el congreso gracias al PACTO DE DELINCUENTES. Este domingo no podemos caer en el comunismo. No van a ganar, no van a gobernar, no dirigirán este país. #FicoElGanador  #FicoEsColombia #Fico...   \n",
        "214  Las alianzas que hizo #ElPactoDeCorruptos demuestra q para ellos los ciudadanos valemos 💩💩💩. Han hecho un recorrido por todas las cárceles de Colombia y mientras más delincuente mejor para ellos.  Por esa razón.  #FicoElGanador  #FicoEl...   \n",
        "\n",
-       "                tweet_id       labels         labels_encoded  \n",
-       "0    1528216296147533824      alegria  [1, 0, 0, 0, 0, 0, 0]  \n",
-       "1    1528425111078019072    asco, ira  [0, 0, 0, 0, 1, 1, 0]  \n",
-       "2    1528451337087762433      alegria  [1, 0, 0, 0, 0, 0, 0]  \n",
-       "3    1528336411451133955      alegria  [1, 0, 0, 0, 0, 0, 0]  \n",
-       "4    1528335860470620160      alegria  [1, 0, 0, 0, 0, 0, 0]  \n",
-       "..                   ...          ...                    ...  \n",
-       "210  1530015260735840263      alegria  [1, 0, 0, 0, 0, 0, 0]  \n",
-       "211  1530115489980108800      alegria  [1, 0, 0, 0, 0, 0, 0]  \n",
-       "212  1530133587269394432         asco  [0, 0, 0, 0, 1, 0, 0]  \n",
-       "213  1530182862250590209  miedo, asco  [0, 1, 0, 0, 1, 0, 0]  \n",
-       "214  1530231996479324161         asco  [0, 0, 0, 0, 1, 0, 0]  \n",
+       "                tweet_id       labels                       labels_encoded  \n",
+       "0    1528216296147533824      alegria  [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]  \n",
+       "1    1528425111078019072    asco, ira  [0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0]  \n",
+       "2    1528451337087762433      alegria  [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]  \n",
+       "3    1528336411451133955      alegria  [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]  \n",
+       "4    1528335860470620160      alegria  [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]  \n",
+       "..                   ...          ...                                  ...  \n",
+       "210  1530015260735840263      alegria  [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]  \n",
+       "211  1530115489980108800      alegria  [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]  \n",
+       "212  1530133587269394432         asco  [0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0]  \n",
+       "213  1530182862250590209  miedo, asco  [0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0]  \n",
+       "214  1530231996479324161         asco  [0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0]  \n",
        "\n",
        "[215 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
